<resources>
    <string name="app_name">Sesion09</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>


<string name="mac_title">Mac</string>
<string name="aw_title">Alienware Laptop</string>
<string name="pillow_title">Almohadas Blancas</string>
<string name="sheets_title">Sábandas Blancas</string>
<string name="refig_title">Refrigerador Whirlpool</string>
<string name="micro_title">Horno de Microondas</string>

<string name="bestbuy_store">BestBuy</string>
<string name="liverpool_store">Liverpool</string>

<string name="bestbuy_phone">3312345678</string>
<string name="liverpool_phone">338765432</string>

<string name="first_location">Zapopan</string>
<string name="sec_location">Guadalajara</string>
<string name="third_location">Tlaquepaque</string>

<string name="activity_product_save">Save</string>
<string name="activity_product_cancel">Cancel</string>
<string name="activity_product_title">Introduce Title...</string>
<string name="activity_product_store">Introduce Store...</string>
<string name="activity_product_location">Introduce Location...</string>
<string name="activity_product_phone">Introduce Phone...</string>
</resources>